edflib.h

/* Sets the startdate and starttime.
 * year: 1985 - 2084, month: 1 - 12, day: 1 - 31
 * hour: 0 - 23, minute: 0 - 59, second: 0 - 59
 * If not called, the library will use the system date and time at runtime
 * Returns 0 on success, otherwise -1
 * This function is optional and can be called only after opening a file in writemode
 * and before the first sample write action
 * Note: for anonymization purposes, the consensus is to use 1985-01-01 00:00:00 for the startdate and starttime.
 */

int edf_set_patientname(int handle, const char *patientname);
/* Sets the patientname. patientname is a pointer to a null-terminated ASCII-string.
 * Returns 0 on success, otherwise -1
 * This function is optional and can be called only after opening a file in writemode
 * and before the first sample write action
 */

int edf_set_patientcode(int handle, const char *patientcode);
/* Sets the patientcode. patientcode is a pointer to a null-terminated ASCII-string.
 * Returns 0 on success, otherwise -1
 * This function is optional and can be called only after opening a file in writemode
 * and before the first sample write action
 */

int edf_set_gender(int handle, int gender);
/* Sets the gender. 1 is male, 0 is female.
 * Returns 0 on success, otherwise -1
 * This function is optional and can be called only after opening a file in writemode
 * and before the first sample write action
 */

int edf_set_birthdate(int handle, int birthdate_year, int birthdate_month, int birthdate_day);
/* Sets the birthdate.
 * year: 1800 - 3000, month: 1 - 12, day: 1 - 31
 * This function is optional
 * Returns 0 on success, otherwise -1
 * This function is optional and can be called only after opening a file in writemode
 * and before the first sample write action
 */

int edf_set_patient_additional(int handle, const char *patient_additional);
/* Sets the additional patientinfo. patient_additional is a pointer to a null-terminated ASCII-string.
 * Returns 0 on success, otherwise -1
 * This function is optional and can be called only after opening a file in writemode
 * and before the first sample write action
 */

int edf_set_admincode(int handle, const char *admincode);
/* Sets the admincode. admincode is a pointer to a null-terminated ASCII-string.
 * Returns 0 on success, otherwise -1
 * This function is optional and can be called only after opening a file in writemode
 * and before the first sample write action
 */

int edf_set_technician(int handle, const char *technician);
/* Sets the technicians name. technician is a pointer to a null-terminated ASCII-string.
 * Returns 0 on success, otherwise -1
 * This function is optional and can be called only after opening a file in writemode
 * and before the first sample write action
 */

int edf_set_equipment(int handle, const char *equipment);
/* Sets the name of the equipment used during the aquisition. equipment is a pointer to a null-terminated ASCII-string.
 * Returns 0 on success, otherwise -1
 * This function is optional and can be called only after opening a file in writemode
 * and before the first sample write action
 */

int edf_set_recording_additional(int handle, const char *recording_additional);
/* Sets the additional recordinginfo. recording_additional is a pointer to a null-terminated ASCII-string.
 * Returns 0 on success, otherwise -1
 * This function is optional and can be called only after opening a file in writemode
 * and before the first sample write action
 */

int edfwrite_physical_samples(int handle, double *buf);
/* Writes n physical samples (uV, mA, Ohm) from *buf belonging to one signal
 * where n is the samplefrequency of that signal.
 * The physical samples will be converted to digital samples using the
 * values of physical maximum, physical minimum, digital maximum and digital minimum
 * The number of samples written is equal to the samplefrequency of the signal
 * Size of buf should be equal to or bigger than sizeof(double[samplefrequency])
 * Call this function for every signal in the file. The order is important!
 * When there are 4 signals in the file,  the order of calling this function
 * must be: signal 0, signal 1, signal 2, signal 3, signal 0, signal 1, signal 2, etc.
 * Returns 0 on success, otherwise -1
 */

int edf_blockwrite_physical_samples(int handle, double *buf);
/* Writes physical samples (uV, mA, Ohm) from *buf
 * buf must be filled with samples from all signals, starting with n samples of signal 0, n samples of signal 1, n samples of signal 2, etc.
 * where n is the samplefrequency of that signal.
 * buf must be filled with samples from all signals, starting with signal 0, 1, 2, etc.
 * one block equals one second
 * The physical samples will be converted to digital samples using the
 * values of physical maximum, physical minimum, digital maximum and digital minimum
 * The number of samples written is equal to the sum of the samplefrequencies of all signals
 * Size of buf should be equal to or bigger than sizeof(double) multiplied by the sum of the samplefrequencies of all signals
 * Returns 0 on success, otherwise -1
 */

int edfwrite_digital_short_samples(int handle, short *buf);
/* Writes n "raw" digital samples from *buf belonging to one signal
 * where n is the samplefrequency of that signal.
 * The samples will be written to the file without any conversion.
 * Because the size of a short is 16-bit, do not use this function with BDF (24-bit)
 * The number of samples written is equal to the samplefrequency of the signal
 * Size of buf should be equal to or bigger than sizeof(short[samplefrequency])
 * Call this function for every signal in the file. The order is important!
 * When there are 4 signals in the file,  the order of calling this function
 * must be: signal 0, signal 1, signal 2, signal 3, signal 0, signal 1, signal 2, etc.
 * Returns 0 on success, otherwise -1
 */

int edfwrite_digital_samples(int handle, int *buf);
/* Writes n "raw" digital samples from *buf belonging to one signal
 * where n is the samplefrequency of that signal.
 * The 16 (or 24 in case of BDF) least significant bits of the sample will be written to the
 * file without any conversion.
 * The number of samples written is equal to the samplefrequency of the signal
 * Size of buf should be equal to or bigger than sizeof(int[samplefrequency])
 * Call this function for every signal in the file. The order is important!
 * When there are 4 signals in the file,  the order of calling this function
 * must be: signal 0, signal 1, signal 2, signal 3, signal 0, signal 1, signal 2, etc.
 * Returns 0 on success, otherwise -1
 */

int edf_blockwrite_digital_3byte_samples(int handle, void *buf);
/* Writes "raw" digital samples from *buf.
 * buf must be filled with samples from all signals, starting with n samples of signal 0, n samples of signal 1, n samples of signal 2, etc.
 * where n is the samplefrequency of that signal.
 * One block equals one second. One sample equals 3 bytes, order is little endian (least significant byte first)
 * Encoding is second's complement, most significant bit of most significant byte is the sign-bit
 * The samples will be written to the file without any conversion.
 * Because the size of a 3-byte sample is 24-bit, this function can only be used when writing a BDF file
 * The number of samples written is equal to the sum of the samplefrequencies of all signals.
 * Size of buf should be equal to or bigger than: the sum of the samplefrequencies of all signals x 3 bytes
 * Returns 0 on success, otherwise -1
 */

int edf_blockwrite_digital_short_samples(int handle, short *buf);
/* Writes "raw" digital samples from *buf.
 * buf must be filled with samples from all signals, starting with n samples of signal 0, n samples of signal 1, n samples of signal 2, etc.
 * where n is the samplefrequency of that signal.
 * One block equals one second.
 * The samples will be written to the file without any conversion.
 * Because the size of a short is 16-bit, do not use this function with BDF (24-bit)
 * The number of samples written is equal to the sum of the samplefrequencies of all signals.
 * Size of buf should be equal to or bigger than sizeof(short) multiplied by the sum of the samplefrequencies of all signals
 * Returns 0 on success, otherwise -1
 */

int edf_blockwrite_digital_samples(int handle, int *buf);
/* Writes "raw" digital samples from *buf.
 * buf must be filled with samples from all signals, starting with n samples of signal 0, n samples of signal 1, n samples of signal 2, etc.
 * where n is the samplefrequency of that signal.
 * One block equals one second.
 * The 16 (or 24 in case of BDF) least significant bits of the sample will be written to the
 * file without any conversion.
 * The number of samples written is equal to the sum of the samplefrequencies of all signals.
 * Size of buf should be equal to or bigger than sizeof(int) multiplied by the sum of the samplefrequencies of all signals
 * Returns 0 on success, otherwise -1
 */

int edfwrite_annotation_utf8(int handle, long long onset, long long duration, const char *description);
/* writes an annotation/event to the file
 * onset is relative to the start of the file
 * onset and duration are in units of 100 microSeconds!     resolution is 0.0001 second!
 * for example: 34.071 seconds must be written as 340710
 * if duration is unknown or not applicable: set a negative number (-1)
 * description is a null-terminated UTF8-string containing the text that describes the event
 * This function is optional and can be called only after opening a file in writemode
 * and before closing the file
 */

int edfwrite_annotation_latin1(int handle, long long onset, long long duration, const char *description);
/* writes an annotation/event to the file
 * onset is relative to the start of the file
 * onset and duration are in units of 100 microSeconds!     resolution is 0.0001 second!
 * for example: 34.071 seconds must be written as 340710
 * if duration is unknown or not applicable: set a negative number (-1)
 * description is a null-terminated Latin1-string containing the text that describes the event
 * This function is optional and can be called only after opening a file in writemode
 * and before closing the file
 */

int edf_set_datarecord_duration(int handle, int duration);
/* Sets the datarecord duration. The default value is 1 second.
 * ATTENTION: the argument "duration" is expressed in units of 10 microSeconds!
 * So, if you want to set the datarecord duration to 0.1 second, you must give
 * the argument "duration" a value of "10000".
 * This function is optional, normally you don't need to change the default value.
 * The datarecord duration must be in the range 0.001 to 60 seconds.
 * Returns 0 on success, otherwise -1
 * This function is NOT REQUIRED but can be called after opening a
 * file in writemode and before the first sample write action.
 * This function can be used when you want to use a samplerate
 * which is not an integer. For example, if you want to use a samplerate of 0.5 Hz,
 * set the samplefrequency to 5 Hz and the datarecord duration to 10 seconds,
 * or set the samplefrequency to 1 Hz and the datarecord duration to 2 seconds.
 * Do not use this function if not necessary.
 */

int edf_set_micro_datarecord_duration(int handle, int duration);
/* Sets the datarecord duration to a very small value.
 * ATTENTION: the argument "duration" is expressed in units of 1 microSecond!
 * This function is optional, normally you don't need to change the default value.
 * The datarecord duration must be in the range 1 to 9999 micro-seconds.
 * Returns 0 on success, otherwise -1
 * This function is NOT REQUIRED but can be called after opening a
 * file in writemode and before the first sample write action.
 * This function can be used when you want to use a very high samplerate.
 * For example, if you want to use a samplerate of 5 GHz,
 * set the samplefrequency to 5000 Hz and the datarecord duration to 1 micro-second.
 * Do not use this function if not necessary.
 * This function was added to accommodate for high speed ADC's e.g. Digital Sampling Oscilloscopes
 */

int edf_set_number_of_annotation_signals(int handle, int annot_signals);
/* Sets the number of annotation signals. The default value is 1
 * This function is optional and can be called only after opening a file in writemode
 * and before the first sample write action
 * Normally you don't need to change the default value. Only when the number of annotations
 * you want to write is higher than the number of datarecords in the recording, you can use
 * this function to increase the storage space for annotations
 * Minimum is 1, maximum is 64
 * Returns 0 on success, otherwise -1
 */

int edf_set_subsecond_starttime(int handle, int subsecond);