lib/src/bindings.dart


  late final _set_patientnamePtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Pointer<ffi.Char>)>>(
      'edf_set_patientname');
  late final _set_patientname = _set_patientnamePtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Char>)>();

  int set_patientcode(
    int handle,
    ffi.Pointer<ffi.Char> patientcode,
  ) {
    return _set_patientcode(
      handle,
      patientcode,
    );
  }

  late final _set_patientcodePtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Pointer<ffi.Char>)>>(
      'edf_set_patientcode');
  late final _set_patientcode = _set_patientcodePtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Char>)>();

  int set_gender(
    int handle,
    int gender,
  ) {
    return _set_gender(
      handle,
      gender,
    );
  }

  late final _set_genderPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>(
          'edf_set_gender');
  late final _set_gender = _set_genderPtr.asFunction<int Function(int, int)>();

  int set_birthdate(
    int handle,
    int birthdate_year,
    int birthdate_month,
    int birthdate_day,
  ) {
    return _set_birthdate(
      handle,
      birthdate_year,
      birthdate_month,
      birthdate_day,
    );
  }

  late final _set_birthdatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Int, ffi.Int, ffi.Int, ffi.Int)>>('edf_set_birthdate');
  late final _set_birthdate =
      _set_birthdatePtr.asFunction<int Function(int, int, int, int)>();

  int set_patient_additional(
    int handle,
    ffi.Pointer<ffi.Char> patient_additional,
  ) {
    return _set_patient_additional(
      handle,
      patient_additional,
    );
  }

  late final _set_patient_additionalPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Pointer<ffi.Char>)>>(
      'edf_set_patient_additional');
  late final _set_patient_additional = _set_patient_additionalPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Char>)>();

  int set_admincode(
    int handle,
    ffi.Pointer<ffi.Char> admincode,
  ) {
    return _set_admincode(
      handle,
      admincode,
    );
  }

  late final _set_admincodePtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Pointer<ffi.Char>)>>(
      'edf_set_admincode');
  late final _set_admincode =
      _set_admincodePtr.asFunction<int Function(int, ffi.Pointer<ffi.Char>)>();

  int set_technician(
    int handle,
    ffi.Pointer<ffi.Char> technician,
  ) {
    return _set_technician(
      handle,
      technician,
    );
  }

  late final _set_technicianPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Pointer<ffi.Char>)>>(
      'edf_set_technician');
  late final _set_technician =
      _set_technicianPtr.asFunction<int Function(int, ffi.Pointer<ffi.Char>)>();

  int set_equipment(
    int handle,
    ffi.Pointer<ffi.Char> equipment,
  ) {
    return _set_equipment(
      handle,
      equipment,
    );
  }

  late final _set_equipmentPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Pointer<ffi.Char>)>>(
      'edf_set_equipment');
  late final _set_equipment =
      _set_equipmentPtr.asFunction<int Function(int, ffi.Pointer<ffi.Char>)>();

  int set_recording_additional(
    int handle,
    ffi.Pointer<ffi.Char> recording_additional,
  ) {
    return _set_recording_additional(
      handle,
      recording_additional,
    );
  }

  late final _set_recording_additionalPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Pointer<ffi.Char>)>>(
      'edf_set_recording_additional');
  late final _set_recording_additional = _set_recording_additionalPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Char>)>();

  int write_physical_samples(
    int handle,
    ffi.Pointer<ffi.Double> buf,
  ) {
    return _write_physical_samples(
      handle,
      buf,
    );
  }

  late final _write_physical_samplesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Int, ffi.Pointer<ffi.Double>)>>('edfwrite_physical_samples');
  late final _write_physical_samples = _write_physical_samplesPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Double>)>();

  int blockwrite_physical_samples(
    int handle,
    ffi.Pointer<ffi.Double> buf,
  ) {
    return _blockwrite_physical_samples(
      handle,
      buf,
    );
  }

  late final _blockwrite_physical_samplesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Int,
              ffi.Pointer<ffi.Double>)>>('edf_blockwrite_physical_samples');
  late final _blockwrite_physical_samples = _blockwrite_physical_samplesPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Double>)>();

  int write_digital_short_samples(
    int handle,
    ffi.Pointer<ffi.Short> buf,
  ) {
    return _write_digital_short_samples(
      handle,
      buf,
    );
  }

  late final _write_digital_short_samplesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Int,
              ffi.Pointer<ffi.Short>)>>('edfwrite_digital_short_samples');
  late final _write_digital_short_samples = _write_digital_short_samplesPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Short>)>();

  int write_digital_samples(
    int handle,
    ffi.Pointer<ffi.Int> buf,
  ) {
    return _write_digital_samples(
      handle,
      buf,
    );
  }

  late final _write_digital_samplesPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Pointer<ffi.Int>)>>(
      'edfwrite_digital_samples');
  late final _write_digital_samples = _write_digital_samplesPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Int>)>();

  int blockwrite_digital_3byte_samples(
    int handle,
    ffi.Pointer<ffi.Void> buf,
  ) {
    return _blockwrite_digital_3byte_samples(
      handle,
      buf,
    );
  }

  late final _blockwrite_digital_3byte_samplesPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Pointer<ffi.Void>)>>(
      'edf_blockwrite_digital_3byte_samples');
  late final _blockwrite_digital_3byte_samples =
      _blockwrite_digital_3byte_samplesPtr
          .asFunction<int Function(int, ffi.Pointer<ffi.Void>)>();

  int blockwrite_digital_short_samples(
    int handle,
    ffi.Pointer<ffi.Short> buf,
  ) {
    return _blockwrite_digital_short_samples(
      handle,
      buf,
    );
  }

  late final _blockwrite_digital_short_samplesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Int,
              ffi.Pointer<ffi.Short>)>>('edf_blockwrite_digital_short_samples');
  late final _blockwrite_digital_short_samples =
      _blockwrite_digital_short_samplesPtr
          .asFunction<int Function(int, ffi.Pointer<ffi.Short>)>();

  int blockwrite_digital_samples(
    int handle,
    ffi.Pointer<ffi.Int> buf,
  ) {
    return _blockwrite_digital_samples(
      handle,
      buf,
    );
  }

  late final _blockwrite_digital_samplesPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Pointer<ffi.Int>)>>(
      'edf_blockwrite_digital_samples');
  late final _blockwrite_digital_samples = _blockwrite_digital_samplesPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Int>)>();

  int write_annotation_utf8(
    int handle,
    int onset,
    int duration,
    ffi.Pointer<ffi.Char> description,
  ) {
    return _write_annotation_utf8(
      handle,
      onset,
      duration,
      description,
    );
  }

  late final _write_annotation_utf8Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Int, ffi.LongLong, ffi.LongLong,
              ffi.Pointer<ffi.Char>)>>('edfwrite_annotation_utf8');
  late final _write_annotation_utf8 = _write_annotation_utf8Ptr
      .asFunction<int Function(int, int, int, ffi.Pointer<ffi.Char>)>();

  int write_annotation_latin1(
    int handle,
    int onset,
    int duration,
    ffi.Pointer<ffi.Char> description,
  ) {
    return _write_annotation_latin1(
      handle,
      onset,
      duration,
      description,
    );
  }

  late final _write_annotation_latin1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Int, ffi.LongLong, ffi.LongLong,
              ffi.Pointer<ffi.Char>)>>('edfwrite_annotation_latin1');
  late final _write_annotation_latin1 = _write_annotation_latin1Ptr
      .asFunction<int Function(int, int, int, ffi.Pointer<ffi.Char>)>();

  int set_datarecord_duration(
    int handle,
    int duration,
  ) {
    return _set_datarecord_duration(
      handle,
      duration,
    );
  }

  late final _set_datarecord_durationPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>(
          'edf_set_datarecord_duration');
  late final _set_datarecord_duration =
      _set_datarecord_durationPtr.asFunction<int Function(int, int)>();

  int set_micro_datarecord_duration(
    int handle,
    int duration,
  ) {
    return _set_micro_datarecord_duration(
      handle,
      duration,
    );
  }

  late final _set_micro_datarecord_durationPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>(
          'edf_set_micro_datarecord_duration');
  late final _set_micro_datarecord_duration =
      _set_micro_datarecord_durationPtr.asFunction<int Function(int, int)>();

  int set_number_of_annotation_signals(
    int handle,
    int annot_signals,
  ) {
    return _set_number_of_annotation_signals(
      handle,
      annot_signals,
    );
  }

  late final _set_number_of_annotation_signalsPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>(
          'edf_set_number_of_annotation_signals');
  late final _set_number_of_annotation_signals =
      _set_number_of_annotation_signalsPtr.asFunction<int Function(int, int)>();

  int set_subsecond_starttime(
    int handle,
    int subsecond,
  ) {
    return _set_subsecond_starttime(
      handle,
      subsecond,
    );
  }

  late final _set_subsecond_starttimePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>(
          'edf_set_subsecond_starttime');
  late final _set_subsecond_starttime =
      _set_subsecond_starttimePtr.asFunction<int Function(int, int)>();
}

class EdfParam extends ffi.Struct {
  @ffi.Array.multi([17])
  external ffi.Array<ffi.Char> label;

  @ffi.LongLong()
  external int smp_in_file;

  @ffi.Double()
  external double phys_max;

  @ffi.Double()
  external double phys_min;

  @ffi.Int()
  external int dig_max;

  @ffi.Int()
  external int dig_min;

  @ffi.Int()
  external int smp_in_datarecord;

  @ffi.Array.multi([9])
  external ffi.Array<ffi.Char> physdimension;

  @ffi.Array.multi([81])
  external ffi.Array<ffi.Char> prefilter;

  @ffi.Array.multi([81])
  external ffi.Array<ffi.Char> transducer;
}

class EdfAnnotation extends ffi.Struct {
  @ffi.LongLong()
  external int onset;

  @ffi.LongLong()
  external int duration_l;

  @ffi.Array.multi([16])
  external ffi.Array<ffi.Char> duration;

  @ffi.Array.multi([513])
  external ffi.Array<ffi.Char> annotation;
}

class EdfHdr extends ffi.Struct {
  @ffi.Int()
  external int handle;

  @ffi.Int()
  external int filetype;

  @ffi.Int()
  external int edfsignals;

  @ffi.LongLong()
  external int file_duration;

  @ffi.Int()
  external int startdate_day;

  @ffi.Int()
  external int startdate_month;

  @ffi.Int()
  external int startdate_year;

  @ffi.LongLong()
  external int starttime_subsecond;

  @ffi.Int()
  external int starttime_second;

  @ffi.Int()
  external int starttime_minute;

  @ffi.Int()
  external int starttime_hour;

  @ffi.Array.multi([81])
  external ffi.Array<ffi.Char> patient;

  @ffi.Array.multi([81])
  external ffi.Array<ffi.Char> recording;

  @ffi.Array.multi([81])
  external ffi.Array<ffi.Char> patientcode;

  @ffi.Array.multi([16])
  external ffi.Array<ffi.Char> gender;

  @ffi.Array.multi([16])
  external ffi.Array<ffi.Char> birthdate;

  @ffi.Int()
  external int birthdate_day;

  @ffi.Int()
  external int birthdate_month;
